// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ShareButton aligned left unchanged 1`] = `
<div>
  <div
    class="memori-dropdown memori-share-button memori-share-button--align-left"
  >
    <span
      class="styles-module__root___-ALla"
    >
      <span
        class="styles-module__trigger___V2aIF"
        id="base-ui-:r1d:"
      >
        <button
          aria-expanded="false"
          aria-haspopup="menu"
          class="memori-button memori-button--outline memori-button--md memori-button--icon-only"
          id="base-ui-:r1e:"
          tabindex="0"
          type="button"
        >
          <span
            class="memori-button__icon"
          >
            <svg
              class="lucide lucide-share2"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="18"
                cy="5"
                r="3"
              />
              <circle
                cx="6"
                cy="12"
                r="3"
              />
              <circle
                cx="18"
                cy="19"
                r="3"
              />
              <line
                x1="8.59"
                x2="15.42"
                y1="13.51"
                y2="17.49"
              />
              <line
                x1="15.41"
                x2="8.59"
                y1="6.51"
                y2="10.49"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
  <div
    aria-atomic="false"
    aria-label="Notifications"
    aria-live="polite"
    aria-relevant="additions text"
    class="memori-alert-viewport memori-alert-viewport--top-end"
    role="region"
    tabindex="-1"
  />
</div>
`;

exports[`renders ShareButton unchanged 1`] = `
<div>
  <div
    class="memori-dropdown memori-share-button"
  >
    <span
      class="styles-module__root___-ALla"
    >
      <span
        class="styles-module__trigger___V2aIF"
        id="base-ui-:r5:"
      >
        <button
          aria-expanded="false"
          aria-haspopup="menu"
          class="memori-button memori-button--outline memori-button--md memori-button--icon-only"
          id="base-ui-:r6:"
          tabindex="0"
          type="button"
        >
          <span
            class="memori-button__icon"
          >
            <svg
              class="lucide lucide-share2"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="18"
                cy="5"
                r="3"
              />
              <circle
                cx="6"
                cy="12"
                r="3"
              />
              <circle
                cx="18"
                cy="19"
                r="3"
              />
              <line
                x1="8.59"
                x2="15.42"
                y1="13.51"
                y2="17.49"
              />
              <line
                x1="15.41"
                x2="8.59"
                y1="6.51"
                y2="10.49"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
  <div
    aria-atomic="false"
    aria-label="Notifications"
    aria-live="polite"
    aria-relevant="additions text"
    class="memori-alert-viewport memori-alert-viewport--top-end"
    role="region"
    tabindex="-1"
  />
</div>
`;

exports[`renders ShareButton with button not primary unchanged 1`] = `
<div>
  <div
    class="memori-dropdown memori-share-button"
  >
    <span
      class="styles-module__root___-ALla"
    >
      <span
        class="styles-module__trigger___V2aIF"
        id="base-ui-:rt:"
      >
        <button
          aria-expanded="false"
          aria-haspopup="menu"
          class="memori-button memori-button--outline memori-button--md memori-button--icon-only"
          id="base-ui-:ru:"
          tabindex="0"
          type="button"
        >
          <span
            class="memori-button__icon"
          >
            <svg
              class="lucide lucide-share2"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="18"
                cy="5"
                r="3"
              />
              <circle
                cx="6"
                cy="12"
                r="3"
              />
              <circle
                cx="18"
                cy="19"
                r="3"
              />
              <line
                x1="8.59"
                x2="15.42"
                y1="13.51"
                y2="17.49"
              />
              <line
                x1="15.41"
                x2="8.59"
                y1="6.51"
                y2="10.49"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
  <div
    aria-atomic="false"
    aria-label="Notifications"
    aria-live="polite"
    aria-relevant="additions text"
    class="memori-alert-viewport memori-alert-viewport--top-end"
    role="region"
    tabindex="-1"
  />
</div>
`;

exports[`renders ShareButton with other tenant img set unchanged 1`] = `
<div>
  <div
    class="memori-dropdown memori-share-button"
  >
    <span
      class="styles-module__root___-ALla"
    >
      <span
        class="styles-module__trigger___V2aIF"
        id="base-ui-:r1t:"
      >
        <button
          aria-expanded="false"
          aria-haspopup="menu"
          class="memori-button memori-button--outline memori-button--md memori-button--icon-only"
          id="base-ui-:r1u:"
          tabindex="0"
          type="button"
        >
          <span
            class="memori-button__icon"
          >
            <svg
              class="lucide lucide-share2"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="18"
                cy="5"
                r="3"
              />
              <circle
                cx="6"
                cy="12"
                r="3"
              />
              <circle
                cx="18"
                cy="19"
                r="3"
              />
              <line
                x1="8.59"
                x2="15.42"
                y1="13.51"
                y2="17.49"
              />
              <line
                x1="15.41"
                x2="8.59"
                y1="6.51"
                y2="10.49"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
  <div
    aria-atomic="false"
    aria-label="Notifications"
    aria-live="polite"
    aria-relevant="additions text"
    class="memori-alert-viewport memori-alert-viewport--top-end"
    role="region"
    tabindex="-1"
  />
</div>
`;

exports[`renders ShareButton with share chat unchanged 1`] = `
<div>
  <div
    class="memori-dropdown memori-share-button"
  >
    <span
      class="styles-module__root___-ALla"
    >
      <span
        class="styles-module__trigger___V2aIF"
        id="base-ui-:r25:"
      >
        <button
          aria-expanded="false"
          aria-haspopup="menu"
          class="memori-button memori-button--outline memori-button--md memori-button--icon-only"
          id="base-ui-:r26:"
          tabindex="0"
          type="button"
        >
          <span
            class="memori-button__icon"
          >
            <svg
              class="lucide lucide-share2"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="18"
                cy="5"
                r="3"
              />
              <circle
                cx="6"
                cy="12"
                r="3"
              />
              <circle
                cx="18"
                cy="19"
                r="3"
              />
              <line
                x1="8.59"
                x2="15.42"
                y1="13.51"
                y2="17.49"
              />
              <line
                x1="15.41"
                x2="8.59"
                y1="6.51"
                y2="10.49"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
  <div
    aria-atomic="false"
    aria-label="Notifications"
    aria-live="polite"
    aria-relevant="additions text"
    class="memori-alert-viewport memori-alert-viewport--top-end"
    role="region"
    tabindex="-1"
  />
</div>
`;

exports[`renders ShareButton with tenant img set unchanged 1`] = `
<div>
  <div
    class="memori-dropdown memori-share-button"
  >
    <span
      class="styles-module__root___-ALla"
    >
      <span
        class="styles-module__trigger___V2aIF"
        id="base-ui-:r1l:"
      >
        <button
          aria-expanded="false"
          aria-haspopup="menu"
          class="memori-button memori-button--outline memori-button--md memori-button--icon-only"
          id="base-ui-:r1m:"
          tabindex="0"
          type="button"
        >
          <span
            class="memori-button__icon"
          >
            <svg
              class="lucide lucide-share2"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="18"
                cy="5"
                r="3"
              />
              <circle
                cx="6"
                cy="12"
                r="3"
              />
              <circle
                cx="18"
                cy="19"
                r="3"
              />
              <line
                x1="8.59"
                x2="15.42"
                y1="13.51"
                y2="17.49"
              />
              <line
                x1="15.41"
                x2="8.59"
                y1="6.51"
                y2="10.49"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
  <div
    aria-atomic="false"
    aria-label="Notifications"
    aria-live="polite"
    aria-relevant="additions text"
    class="memori-alert-viewport memori-alert-viewport--top-end"
    role="region"
    tabindex="-1"
  />
</div>
`;

exports[`renders ShareButton with title unchanged 1`] = `
<div>
  <div
    class="memori-dropdown memori-share-button"
  >
    <span
      class="styles-module__root___-ALla"
    >
      <span
        class="styles-module__trigger___V2aIF"
        id="base-ui-:rl:"
      >
        <button
          aria-expanded="false"
          aria-haspopup="menu"
          class="memori-button memori-button--outline memori-button--md memori-button--icon-only"
          id="base-ui-:rm:"
          tabindex="0"
          type="button"
        >
          <span
            class="memori-button__icon"
          >
            <svg
              class="lucide lucide-share2"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="18"
                cy="5"
                r="3"
              />
              <circle
                cx="6"
                cy="12"
                r="3"
              />
              <circle
                cx="18"
                cy="19"
                r="3"
              />
              <line
                x1="8.59"
                x2="15.42"
                y1="13.51"
                y2="17.49"
              />
              <line
                x1="15.41"
                x2="8.59"
                y1="6.51"
                y2="10.49"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
  <div
    aria-atomic="false"
    aria-label="Notifications"
    aria-live="polite"
    aria-relevant="additions text"
    class="memori-alert-viewport memori-alert-viewport--top-end"
    role="region"
    tabindex="-1"
  />
</div>
`;

exports[`renders ShareButton with url unchanged 1`] = `
<div>
  <div
    class="memori-dropdown memori-share-button"
  >
    <span
      class="styles-module__root___-ALla"
    >
      <span
        class="styles-module__trigger___V2aIF"
        id="base-ui-:rd:"
      >
        <button
          aria-expanded="false"
          aria-haspopup="menu"
          class="memori-button memori-button--outline memori-button--md memori-button--icon-only"
          id="base-ui-:re:"
          tabindex="0"
          type="button"
        >
          <span
            class="memori-button__icon"
          >
            <svg
              class="lucide lucide-share2"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="18"
                cy="5"
                r="3"
              />
              <circle
                cx="6"
                cy="12"
                r="3"
              />
              <circle
                cx="18"
                cy="19"
                r="3"
              />
              <line
                x1="8.59"
                x2="15.42"
                y1="13.51"
                y2="17.49"
              />
              <line
                x1="15.41"
                x2="8.59"
                y1="6.51"
                y2="10.49"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
  <div
    aria-atomic="false"
    aria-label="Notifications"
    aria-live="polite"
    aria-relevant="additions text"
    class="memori-alert-viewport memori-alert-viewport--top-end"
    role="region"
    tabindex="-1"
  />
</div>
`;

exports[`renders ShareButton without qr code unchanged 1`] = `
<div>
  <div
    class="memori-dropdown memori-share-button"
  >
    <span
      class="styles-module__root___-ALla"
    >
      <span
        class="styles-module__trigger___V2aIF"
        id="base-ui-:r15:"
      >
        <button
          aria-expanded="false"
          aria-haspopup="menu"
          class="memori-button memori-button--outline memori-button--md memori-button--icon-only"
          id="base-ui-:r16:"
          tabindex="0"
          type="button"
        >
          <span
            class="memori-button__icon"
          >
            <svg
              class="lucide lucide-share2"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="18"
                cy="5"
                r="3"
              />
              <circle
                cx="6"
                cy="12"
                r="3"
              />
              <circle
                cx="18"
                cy="19"
                r="3"
              />
              <line
                x1="8.59"
                x2="15.42"
                y1="13.51"
                y2="17.49"
              />
              <line
                x1="15.41"
                x2="8.59"
                y1="6.51"
                y2="10.49"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
  </div>
  <div
    aria-atomic="false"
    aria-label="Notifications"
    aria-live="polite"
    aria-relevant="additions text"
    class="memori-alert-viewport memori-alert-viewport--top-end"
    role="region"
    tabindex="-1"
  />
</div>
`;
